--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-/* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+}
 
 body {
   margin: 0;
